--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.UnlockMaster">
 
@@ -36,13 +36,13 @@
         </activity>
 
         <service
-            android:name=".ScreenUnlockListenerService"
+            android:name=".presentation.unlock_counter_service.ScreenUnlockListenerService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
 
         <receiver
-            android:name=".ScreenUnlockReceiver"
+            android:name=".presentation.unlock_counter_service.ScreenUnlockReceiver"
             android:exported="true">
 
             <intent-filter>
