--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,11 @@ dependencies {
 
     // Jetpack Compose
     implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.compose.ui:ui:1.3.2'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.2'
+    implementation 'androidx.compose.ui:ui:1.3.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
     implementation 'androidx.compose.material:material:1.3.1'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.2'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -69,9 +70,9 @@ dependencies {
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Room
-    implementation 'androidx.room:room-ktx:2.4.3'
-    annotationProcessor 'androidx.room:room-compiler:2.4.3'
-    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-ktx:2.5.0'
+    annotationProcessor 'androidx.room:room-compiler:2.5.0'
+    kapt 'androidx.room:room-compiler:2.5.0'
 
     // Api >= 21 support for DateTime API
     // noinspection GradleDependency
