Added the functionality of adding and updating the unlock limit on the UnlockLimitSetupScreen + UnlockMasterService now displays the notification containing information about the unlock limit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         </activity>
 
         <service
-            android:name=".presentation.unlock_counter_service.ScreenUnlockListenerService"
+            android:name=".presentation.unlock_counter_service.UnlockMasterService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="mediaPlayback" />
