--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation 'androidx.compose.ui:ui:1.3.3'
     implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.compose.material:material:1.3.1'
     implementation 'androidx.compose.material:material-icons-extended:1.3.1'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
