--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.5.0'
     kapt 'androidx.room:room-compiler:2.5.0'
 
+    // Preferences DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+
     // Permission handling
     implementation "com.google.accompanist:accompanist-permissions:0.28.0"
 
