--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,11 @@ android {
     }
     compileOptions {
         coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -52,16 +52,16 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.0'
 
     // Jetpack Compose
     implementation 'androidx.activity:activity-compose:1.7.0'
-    implementation 'androidx.compose.ui:ui:1.5.0-alpha01'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.0'
+    implementation 'androidx.compose.ui:ui:1.5.0-alpha02'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.compose.material:material:1.4.0'
-    implementation 'androidx.compose.material:material-icons-extended:1.4.0'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.0'
+    implementation 'androidx.compose.material:material:1.4.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.1'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.1'
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
