--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,16 +52,16 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
 
     // Jetpack Compose
-    implementation 'androidx.activity:activity-compose:1.7.0'
-    implementation 'androidx.compose.ui:ui:1.5.0-alpha02'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.compose.ui:ui:1.5.0-beta01'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.3'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.compose.material:material:1.4.1'
-    implementation 'androidx.compose.material:material-icons-extended:1.4.1'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.1'
+    implementation 'androidx.compose.material:material:1.4.3'
+    implementation 'androidx.compose.material:material-icons-extended:1.4.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.3'
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
