--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,16 @@
         <receiver android:name=".presentation.receivers.DailyWrapUpAlarmReceiver" />
 
         <receiver
+            android:name=".presentation.receivers.TimePreferencesChangeReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.TIME_SET" />
+                <action android:name="android.intent.action.DATE_CHANGED" />
+                <action android:name="android.intent.action.TIMEZONE_CHANGED" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
             android:name=".presentation.receivers.app_lifecycle_receivers.BootReceiver"
             android:enabled="true"
             android:exported="true">
