--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ plugins {
 
 android {
     namespace 'com.sweak.unlockmaster'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.sweak.unlockmaster"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -57,19 +57,19 @@ dependencies {
 
     // Jetpack Compose
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation 'androidx.compose.ui:ui:1.5.0-beta01'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.4.3'
-    implementation 'androidx.navigation:navigation-compose:2.5.3'
-    implementation 'androidx.compose.material:material:1.4.3'
-    implementation 'androidx.compose.material:material-icons-extended:1.4.3'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.4.3'
+    implementation 'androidx.compose.ui:ui:1.5.0-rc01'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.0'
+    implementation 'androidx.navigation:navigation-compose:2.7.1'
+    implementation 'androidx.compose.material:material:1.5.0'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.0'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.0'
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
 
     // Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.45'
-    kapt 'com.google.dagger:hilt-compiler:2.45'
+    implementation 'com.google.dagger:hilt-android:2.47'
+    kapt 'com.google.dagger:hilt-compiler:2.47'
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     // Room
@@ -92,8 +92,8 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.3'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.4.3'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.0'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.0'
 }
