--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,19 +53,19 @@ android {
 dependencies {
 
     // Core
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
 
     // Jetpack Compose
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation 'androidx.compose.ui:ui:1.5.0-rc01'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.0'
-    implementation 'androidx.navigation:navigation-compose:2.7.1'
-    implementation 'androidx.compose.material:material:1.5.0'
-    implementation 'androidx.compose.material:material-icons-extended:1.5.0'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.0'
+    implementation 'androidx.compose.ui:ui:1.5.1'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.7.2'
+    implementation 'androidx.compose.material:material:1.5.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.5.1'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.5.1'
 
     // Coroutines
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
 
     // Dagger Hilt
     implementation 'com.google.dagger:hilt-android:2.48'
@@ -80,11 +81,11 @@ dependencies {
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 
     // Permission handling
-    implementation 'com.google.accompanist:accompanist-permissions:0.30.0'
+    implementation 'com.google.accompanist:accompanist-permissions:0.32.0'
 
     // API < 26 support for DateTime API
     // noinspection GradleDependency
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.2'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 
     // View components
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
@@ -93,6 +94,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.0'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.0'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.1'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.5.1'
 }
