--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.7.3'
     implementation 'androidx.compose.material:material:1.5.2'
     implementation 'androidx.compose.material:material-icons-extended:1.5.2'
+    implementation 'androidx.compose.material3:material3:1.1.2'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.5.2'
 
     // Coroutines
