Created the UnlockMasterBackupManager with its initial, working implementation - no sophisticated error handling yet

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.material:material:1.10.0'
 
+    // JSON handling for backup files
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     // Test
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
