--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,12 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    dependenciesInfo {
+        // Disables dependency metadata when building APKs:
+        includeInApk = false
+        // Enabled dependency metadata when building App Bundles:
+        includeInBundle = true
+    }
 }
 
 dependencies {
@@ -57,12 +63,12 @@ dependencies {
 
     // Jetpack Compose
     implementation 'androidx.activity:activity-compose:1.8.2'
-    implementation 'androidx.compose.ui:ui:1.6.4'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.4'
+    implementation 'androidx.compose.ui:ui:1.6.5'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.5'
     implementation 'androidx.navigation:navigation-compose:2.7.7'
-    implementation 'androidx.compose.material:material-icons-extended:1.6.4'
+    implementation 'androidx.compose.material:material-icons-extended:1.6.5'
     implementation 'androidx.compose.material3:material3:1.2.1'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.4'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.5'
 
     // Coroutines
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
@@ -98,6 +104,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.4'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.6.4'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.5'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.6.5'
 }
